Now fills cell with colors

--- a/ticounter.kv
+++ b/ticounter.kv
@@ -54,7 +54,9 @@
             cols:2
             GridLayout:
                 rows:2
-                GridLayout:
+                Label:
+                    id: profit
+                    text: "0"
 
                 Button:
                     text:"Export to Excel"
