Undo button added

--- a/ticounter.kv
+++ b/ticounter.kv
@@ -67,7 +67,7 @@
         GridLayout:
             cols:3
             GridLayout:
-                size_hint_x: 0.5
+                size_hint_x: 0.8
                 rows: 8
                 Label:
                     id: total_profit
@@ -82,7 +82,7 @@
                 Label:
                     id: current_bet
                     halign:'center'
-                    text: "Betting: ?"
+                    text: "? Betting ?"
                     font_size:26
                     size_hint_y: 0.2
 
@@ -108,7 +108,7 @@
                     size_hint_y: 0.2
 
                 GridLayout:
-                    cols:2
+                    cols:3
                     size_hint_y:0.4
                     Button:
                         text:"Export\nto\nExcel"
@@ -120,11 +120,12 @@
                     Button:
                         text: "Reset\nShoe"
                         halign:'center'
-
                         on_press: root.reset()
 
-            GridLayout:
-                size_hint_x: 0.2
+                    Button:
+                        text:'Del\nMistake'
+                        halign:'center'
+                        on_press: root.mistake()
             ScrollView:
                 size_hint_x: 0.7
                 Label:
