Undo button fixed (forreal)

--- a/ticounter.kv
+++ b/ticounter.kv
@@ -82,7 +82,7 @@
                 Label:
                     id: current_bet
                     halign:'center'
-                    text: "? Betting ?"
+                    text: "? bet on ?"
                     font_size:26
                     size_hint_y: 0.2
 
