upgraded the display and excel sheet prints

--- a/ticounter.kv
+++ b/ticounter.kv
@@ -6,8 +6,8 @@
 
     total_wins:total_wins
 
+    total_bets:total_bets
     shoe_ti:shoe_ti
-    in_game_ti:in_game_ti
     pre_ti:pre_ti
 
     board:board
@@ -93,18 +93,18 @@
                     size_hint_y: 0.35
 
                 Label:
-                    id: shoe_ti
-                    text: "Shoe TI: 0"
+                    id: total_bets
+                    text: "# of bets: 0"
                     size_hint_y: 0.2
 
                 Label:
-                    id: in_game_ti
-                    text: "In-Game TI: 0"
+                    id: shoe_ti
+                    text: "Shoe TI: None"
                     size_hint_y: 0.2
 
                 Label:
                     id: pre_ti
-                    text: "Pre-TI: 0"
+                    text: "Pre-TI: None"
                     size_hint_y: 0.2
 
                 GridLayout:
